# cu_pg_parquet

./: .CLAUDE.md.swp  .gitignore  .gitignore.swp  .markdownlint.json  .pre-commit-config.yaml  100_percent_solutions.md  100percent_execution_ready.md  CLAUDE.md  DECIMAL_PASS2_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  TIDY_CHANGES.md  achieve_100_percent.py  alignment_solution_summary.md  analyze_256mb_boundary.py  analyze_384mb_448mb_pattern.py  analyze_40_percent_issue.py  analyze_487_root_cause.py  analyze_487_solution.py  analyze_64mb_boundary.py  analyze_64mb_boundary_threads.py  analyze_8kb_vs_64mb_boundary.py  analyze_abnormal_keys.py  analyze_actual_positions.py  analyze_actual_row_header.py  analyze_actual_row_size.py  analyze_actual_thread_distribution.py  analyze_actual_thread_ids.py  analyze_alignment.py  analyze_bit28_pattern.py  analyze_both_cases.py  analyze_boundary_issue.py  analyze_chunk_79_detail.py  analyze_chunk_mixing.py  analyze_chunk_scenarios.py  analyze_customer_cudf.py  analyze_customer_parquet.py  analyze_exact_thread_boundary.py  analyze_gap_with_thread_ids.py  analyze_gpu_utilization.py  (+216 more)
.claude/: todo.md
.clinerules/: projectbrief.md
.serena/: project.yml
archive/: Untitled-3.ini  arrow_gpu_pass1_fully_integrated.py  arrow_gpu_pass1_true_parallel.py  arrow_gpu_pass1_ultimate_simple.py  arrow_gpu_pass1_v7_column_wise_integrated.py  arrow_gpu_pass2.py  arrow_gpu_pass2_fixed.py  benchmark_gpu_parse_only.py  benchmark_lineorder_5m_string_optimized.py  benchmark_parallel_ctid.py  benchmark_parallel_ctid_ray.py  benchmark_parallel_ctid_ray_chunked.py  benchmark_parallel_ctid_ray_chunked_cupy.py  benchmark_parallel_ctid_ray_double_buffer.py  benchmark_parallel_ctid_ray_sequential_gpu_batch.py  benchmark_parallel_ctid_ray_sequential_gpu_batch_new.py  benchmark_parallel_ctid_ray_sequential_gpu_current.py  benchmark_parallel_ctid_ray_sequential_gpu_pinned.py  benchmark_pinned_async.py  benchmark_rust_gpu_6chunks.py  benchmark_rust_gpu_direct_kvikio.py  benchmark_rust_gpu_optimized.py  benchmark_rust_gpu_ringbuffer.py  debug_sample_data.py  debug_simple_parser.py  generate_expected_meta.py  gpu_decoder_v2_decimal_optimized.py  gpu_decoder_v4_ultimate_integrated.py  gpu_decoder_v5_true_parallel.py  gpu_decoder_v6_final_parallel.py  gpu_memory_manager_v2.py  integrated_parser_lite.py  main.py  run_multigpu_parquet.sh  test_postgres_binary_cuda_parquet.py  test_postgres_binary_cuda_parser_improved.py  test_postgres_binary_cuda_parser_module.py  現在大規模なリファクタリングの途中で既存コードを読むよりは外部有識者のアドバイス.ini
benchmark/: analyze_psycopg3_chunks.py  benchmark_comparison.py  benchmark_decimal_comparison.py  benchmark_direct_gpu_copy.py  benchmark_efficient_copy.py  benchmark_final_optimized.py  benchmark_gds_nvme.py  benchmark_gpu_direct.py  benchmark_gpu_parse_debug.py  benchmark_gpu_parse_only.py  benchmark_kvikio_heap.py  benchmark_libpq_direct.py  benchmark_libpq_gpu_direct.py  benchmark_lineorder_5m.py  benchmark_lineorder_5m_individual.py  benchmark_lineorder_5m_zero_copy.py  benchmark_parallel_ctid_fixed.py  benchmark_parallel_ctid_ray_64batch.py  benchmark_parallel_ctid_ray_chunked.py  benchmark_parallel_ctid_ray_chunked_cupy_double_buffer.py  benchmark_parallel_ctid_ray_sequential_gpu.py  benchmark_parallel_ctid_ray_sequential_gpu_debug.py  benchmark_parallel_ctid_ray_sequential_gpu_direct.py  benchmark_parallel_ctid_ray_sequential_gpu_direct_extraction.py  benchmark_pg2arrow_style.py  benchmark_postgres_read_speed.py  benchmark_rmm_compatible.py  benchmark_rust_gpu_2phase.py  (+33 more)
rust/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/src/: arrow_builder.rs  cuda.rs  ffi.rs  lib.rs  postgres.rs
rust_bench_optimized/: Cargo.toml
rust_bench_optimized/src/: main.rs  main_sequential.rs  main_sequential_chunks.rs  main_single_chunk.rs
rust_pg_binary_extractor/: Cargo.toml
rust_pg_binary_extractor/src/: main.rs  main_env.rs  main_sequential.rs  main_sequential_chunks.rs  main_single_chunk.rs  main_single_copy.rs
(+371 files in other folders)
