[package]
name = "pg_fast_copy_optimized"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
futures-util = "0.3"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1