[package]
name = "pg_fast_copy_optimized"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pg_fast_copy_optimized"
path = "src/main.rs"

[[bin]]
name = "pg_fast_copy_sequential"
path = "src/main_sequential_chunks.rs"

[[bin]]
name = "pg_fast_copy_single_chunk"
path = "src/main_single_chunk.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1